add readme file

--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
         </tr>
     </table>
 
-    <button id='playAgain'>Let's play again</button>
+    <button id="playAgain">Let's play again</button>
+    <button id="restartGame">Reset The Game</button>
+
+    <div id="scoreArea">
+        <p>X's Score: <span id="xText"></span></p>
+        <p>O's Score: <span id="oText"></span></p>
+    </div>
+
+    <div class="turn"></div>
     <footer>Copyright @2019</footer>
     <script src="js/main.js"></script>
 </body>
